src/snapshots/tui_term__widget__tests__underlined_text.snap
---
source: src/widget.rs
expression: view
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "This line will be displayed with an underline. This should have no style.█      ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, modifier: UNDERLINED,
        x: 46, y: 0, fg: Reset, bg: Reset, modifier: (empty),
        x: 73, y: 0, fg: Gray, bg: Reset, modifier: (empty),
        x: 74, y: 0, fg: Reset, bg: Reset, modifier: (empty),
    ]
}
