src/snapshots/tui_term__widget__tests__vttest_02_01.snap
---
source: src/widget.rs
expression: view
---
"********************************************************************************"
"********************************************************************************"
"********************************************************************************"
"********************************************************************************"
"This should be three identical lines of *'s completely filling                  "
"the top of the screen without any empty lines between.                          "
"(Test of WRAP AROUND mode setting.)                                             "
"Push <RETURN>                                                                   "
"             █                                                                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "

