src/snapshots/tui_term__widget__tests__vttest_02_02.snap
---
source: src/widget.rs
expression: view
---
"        *       *       *       *       *       *       *       *       *      *"
"      *     *     *     *     *     *     *     *     *     *     *     *     * "
"                                                                                "
"Test of TAB setting/resetting. These two lines                                  "
"should look the same. Push <RETURN>                                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "

