src/snapshots/tui_term__widget__tests__vttest_02_03.snap
---
source: src/widget.rs
expression: view
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "12345678901234567890123456789012345678901234567890123456789012345678901234567890",
        "123456789012345678901234567890123456789012345678901                             ",
        "  This is 132 column mode, light background.                                    ",
        "   This is 132 column mode, light background.                                   ",
        "    This is 132 column mode, light background.                                  ",
        "     This is 132 column mode, light background.                                 ",
        "      This is 132 column mode, light background.                                ",
        "       This is 132 column mode, light background.                               ",
        "        This is 132 column mode, light background.                              ",
        "         This is 132 column mode, light background.                             ",
        "          This is 132 column mode, light background.                            ",
        "           This is 132 column mode, light background.                           ",
        "            This is 132 column mode, light background.                          ",
        "             This is 132 column mode, light background.                         ",
        "              This is 132 column mode, light background.                        ",
        "               This is 132 column mode, light background.                       ",
        "                This is 132 column mode, light background.                      ",
        "                 This is 132 column mode, light background.                     ",
        "                  This is 132 column mode, light background.                    ",
        "                   This is 132 column mode, light background.Push <RETURN>      ",
        "                                                                          █     ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 74, y: 20, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 75, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
